Alteraçoes esteticas no css

--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -5,16 +5,17 @@
     <title>Title</title>
     {% load static %}
     <link rel="stylesheet" href="../../static/forum/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
 <body>
     <header>
-            <a id="forumtitle">Nome do Forum</a>
-            <a id="navlogin"><button>LogIn</button></a>
-            <a style="float: right"><input type="text" name="SearchBar" id="search" placeholder="Search..."></a>
+        <a id="forumtitle">Quarentine Life</a>
+        <a id="navlogin"><button>Log In</button></a>
+        <a style="float: right"><input type="text" name="SearchBar" id="search" placeholder="Search..."></a>
     </header>
 
     <aside>
-        <ul class="sidebar">
+        <ul>
             <h3>Topicos populares</h3>
             <li>Topico 1</li>
             <li>Topico 2</li>
