--- a/forum/static/forum/main.css
+++ b/forum/static/forum/main.css
@@ -1,14 +1,26 @@
 *{
     box-sizing: border-box;
+    background-color: #dfe3ee;
+    font-family: 'Lato';
+}
+
+body{
+    margin: 0;
 }
 
 header{
-    background-color: orangered;
+    background-color: white;
 }
 
 header a{
     display: inline;
     line-height: 100px;
+    background-color: white;
+}
+
+header input{
+    height: 25px;
+    width: 200px;
 }
 
 #forumtitle{
@@ -21,10 +33,16 @@ header a{
     margin-right: 20px;
 }
 
-.sidebar{
+aside ul{
     width: 15%;
     float: left;
-    background-color: green;
+    /*background-color: lightgray;*/
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+aside h3{
+
 }
 
 section{
@@ -32,7 +50,7 @@ section{
     float: left;
     padding: 20px;
     margin: 16px 0px;
-    background-color: aquamarine;
+
     height: 100%;
 }
 
@@ -45,4 +63,15 @@ article{
 
 article h2{
     margin: 0px;
+}
+
+button{
+    border: 1px solid transparent;
+    border-radius: 5px;
+    background-color: #ff6200;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 2px;
+    padding: 5px 10px;
+    height: 30px;
 }
