Alterações no css e html-ta mais bonito :)

--- a/forum/static/forum/main.css
+++ b/forum/static/forum/main.css
@@ -1,21 +1,29 @@
 *{
     box-sizing: border-box;
-    background-color: #dfe3ee;
+
     font-family: 'Lato';
 }
 
 body{
     margin: 0;
+    background-color: #dfe3ee;
 }
 
 header{
     background-color: white;
 }
 
+header img{
+    display: inline-block;
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
 header a{
     display: inline;
     line-height: 100px;
-    background-color: white;
 }
 
 header input{
@@ -33,36 +41,61 @@ header input{
     margin-right: 20px;
 }
 
-aside ul{
+aside{
     width: 15%;
     float: left;
     /*background-color: lightgray;*/
-    border: 1px solid gray;
-    border-radius: 5px;
+    /*border: 1px solid transparent;*/
+    /*border-radius: 5px;*/
+    padding: 0;
+    margin-top: 30px;
+}
+
+aside ul{
+    padding: 0;
+}
+
+aside a{
+    padding-left: 25px;
+    display: block;
+    text-decoration: none;
+    color: black;
+
 }
 
 aside h3{
-
+    text-align: center;
+    margin-top: 0;
 }
 
 section{
-    width: 85%;
+    width: 65%;
     float: left;
-    padding: 20px;
-    margin: 16px 0px;
-
+    margin: 30px;
     height: 100%;
 }
 
 article{
     margin-bottom: 20px;
-    border: 2px dashed gray;
-    padding: 10px;
-    border-radius: 10px;
+    border: 1px solid transparent;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: white;
 }
 
-article h2{
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+article a{
     margin: 0px;
+    text-align: center;
+    text-decoration: none;
+    color: #3b5998;
+    padding-left: 10px;
 }
 
 button{
