--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -9,29 +9,32 @@
 </head>
 <body>
     <header>
+        <img src="https://i.pinimg.com/originals/3a/d3/2b/3ad32b2aa24f4d33e28c1a73b055a079.png">
         <a id="forumtitle">Quarentine Life</a>
         <a id="navlogin"><button>Log In</button></a>
         <a style="float: right"><input type="text" name="SearchBar" id="search" placeholder="Search..."></a>
     </header>
 
     <aside>
+        <h3>Tópicos populares</h3>
         <ul>
-            <h3>Topicos populares</h3>
-            <li>Topico 1</li>
-            <li>Topico 2</li>
+            <a href="index.html">Filmes</a>
+            <a href="index.html">Culinária</a>
         </ul>
     </aside>
 
     <section>
         <article>
-            <h2>Nome post-Autor</h2>
+            <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
+            <a href="index.html">Autor</a>
             <p>Texto do post</p>
             <button>Like</button>
         </article>
 
         <article>
-            <h2>Nome post-Autor</h2>
-             <p>Texto do post</p>
+            <img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar">
+            <a href="index.html">Autor</a>
+            <p>Texto do post</p>
             <button>Like</button>
         </article>
     </section>
