--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -15,6 +15,7 @@
         <a style="float: right"><input type="text" name="SearchBar" id="search" placeholder="Search..."></a>
     </header>
 
+    <main>
     <aside>
         <h3>Tópicos populares</h3>
         <ul>
@@ -38,6 +39,6 @@
             <button>Like</button>
         </article>
     </section>
-
+    </main>
 </body>
 </html>
