--- a/forum/static/forum/main.css
+++ b/forum/static/forum/main.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-
     font-family: 'Lato';
 }
 
@@ -11,6 +10,10 @@ body{
 
 header{
     background-color: white;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    overflow: hidden;
 }
 
 header img{
@@ -31,6 +34,11 @@ header input{
     width: 200px;
 }
 
+main{
+    margin-top: 100px;
+    height: calc(100vh - 200px);
+}
+
 #forumtitle{
     font-size: 30px;
     margin-left: 20px;
@@ -49,6 +57,7 @@ aside{
     /*border-radius: 5px;*/
     padding: 0;
     margin-top: 30px;
+    /*position: fixed;*/
 }
 
 aside ul{
