--- a/forum/static/forum/main.css
+++ b/forum/static/forum/main.css
@@ -12,19 +12,21 @@ header{
     background-color: white;
     position: fixed;
     width: 100%;
+    height: 100px;
     top: 0;
     overflow: hidden;
 }
 
 header img{
-    display: inline-block;
     vertical-align: middle;
     width: 50px;
     height: 50px;
-    border-radius: 50%;
+    float: left;
+    margin-top: 25px;
+    margin-left: 20px;
 }
 
-header a{
+header a {
     display: inline;
     line-height: 100px;
 }
@@ -41,7 +43,9 @@ main{
 
 #forumtitle{
     font-size: 30px;
-    margin-left: 20px;
+    margin-left: 10px;
+    /*float: left;*/
+
 }
 
 #navlogin{
@@ -65,7 +69,7 @@ aside ul{
 }
 
 aside a{
-    padding-left: 25px;
+    padding-left: 30px;
     display: block;
     text-decoration: none;
     color: black;
@@ -73,7 +77,7 @@ aside a{
 }
 
 aside h3{
-    text-align: center;
+    padding-left: 30px;
     margin-top: 0;
 }
 
