--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -12,33 +12,22 @@
         <img src="https://i.pinimg.com/originals/3a/d3/2b/3ad32b2aa24f4d33e28c1a73b055a079.png">
         <a id="forumtitle">Quarentine Life</a>
         <a id="navlogin"><button>Log In</button></a>
-        <a style="float: right"><input type="text" name="SearchBar" id="search" placeholder="Search..."></a>
+        <a style="float: right"><input type="text" name="SearchBar" placeholder="Search..."></a>
     </header>
 
     <main>
-    <aside>
-        <h3>Tópicos populares</h3>
-        <ul>
-            <a href="index.html">Filmes</a>
-            <a href="index.html">Culinária</a>
-        </ul>
-    </aside>
+        <aside>
+            <h3>Tópicos populares</h3>
+            {% block asideList %}
 
-    <section>
-        <article>
-            <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
-            <a href="index.html">Autor</a>
-            <p>Texto do post</p>
-            <button>Like</button>
-        </article>
+            {% endblock asideList %}
+        </aside>
 
-        <article>
-            <img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar">
-            <a href="index.html">Autor</a>
-            <p>Texto do post</p>
-            <button>Like</button>
-        </article>
-    </section>
+        <section>
+            {% block articles %}
+           
+            {% endblock articles%}
+        </section>
     </main>
 </body>
 </html>
