--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -2,22 +2,22 @@
 
 {% block asideList %}
     <ul>
-        <a href="index.html">Filmes</a>
-        <a href="index.html">Culinária</a>
+        <a href="">Filmes</a>
+        <a href="">Culinária</a>
     </ul>
 {% endblock asideList %}
 
 {% block articles %}
     <article>
         <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
-        <a href="index.html">Autor</a>
+        <a href="">Autor</a>
         <p>Texto do post</p>
         <button>Like</button>
     </article>
 
     <article>
         <img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar">
-        <a href="index.html">Autor</a>
+        <a href="">Autor</a>
         <p>Texto do post</p>
         <button>Like</button>
     </article>
