--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -9,14 +9,16 @@
 
 {% block articles %}
     <article>
-        <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
-        <a href="">Autor</a>
-        <p>Texto do post</p>
+        <a href=""><img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar"></a>
+        <div class="author">
+            <a href="">Autor</a>
+            <p>Texto do post</p>
+        </div>
         <button>Like</button>
     </article>
 
     <article>
-        <img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar">
+        <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
         <a href="">Autor</a>
         <p>Texto do post</p>
         <button>Like</button>
