--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <header>
-        <img src="https://i.pinimg.com/originals/3a/d3/2b/3ad32b2aa24f4d33e28c1a73b055a079.png">
-        <a id="forumtitle">Quarentine Life</a>
-        <a id="navlogin"><button>Log In</button></a>
-        <a style="float: right"><input type="text" name="SearchBar" placeholder="Search..."></a>
+        <div class="leftheader">
+            <img src="https://i.pinimg.com/originals/3a/d3/2b/3ad32b2aa24f4d33e28c1a73b055a079.png">
+            <a id="forumtitle">Quarentine Life</a>
+        </div>
+        <div class="rightheader">
+            <a style="float: right"><input type="text" name="SearchBar" placeholder="Search..."></a>
+            <a id="navlogin"><button>Log In</button></a>
+        </div>
     </header>
 
     <main>
