Flex box em tudo e login

--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -9,18 +9,73 @@
 
 {% block articles %}
     <article>
-        <a href=""><img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar"></a>
-        <div class="author">
+         <div class="toppost">
+            <a href=""><img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar"></a>
             <a href="">Autor</a>
+            <a>ontem às 23:00</a>
+        </div>
+        <div class="textpost">
             <p>Texto do post</p>
         </div>
-        <button>Like</button>
+        <div class="buttonspost">
+            <button>Like</button>
+        </div>
     </article>
 
     <article>
-        <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
-        <a href="">Autor</a>
-        <p>Texto do post</p>
-        <button>Like</button>
+        <div class="toppost">
+            <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
+            <a href="">Autor</a>
+            <a>ontem às 23:00</a>
+        </div>
+        <div class="textpost">
+            <p>Texto do post</p>
+        </div>
+        <div class="buttonspost">
+            <button>Like</button>
+        </div>
+    </article>
+
+     <article>
+        <div class="toppost">
+            <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
+            <a href="">Autor</a>
+            <a>ontem às 23:00</a>
+        </div>
+        <div class="textpost">
+            <p>Texto do post</p>
+        </div>
+        <div class="buttonspost">
+            <button>Like</button>
+        </div>
+    </article>
+
+     <article>
+        <div class="toppost">
+            <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
+            <a href="">Autor</a>
+            <a>ontem às 23:00</a>
+        </div>
+        <div class="textpost">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae itaque iusto minima perferendis porro quas repellat sed similique. Aut cupiditate eius ipsa nobis non perferendis possimus tempora ullam velit?</p>
+        </div>
+        <div class="buttonspost">
+            <img src="../../static/forum/pizza.png">
+            <button>Like</button>
+        </div>
+    </article>
+
+     <article>
+        <div class="toppost">
+            <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
+            <a href="">Autor</a>
+            <a>ontem às 23:00</a>
+        </div>
+        <div class="textpost">
+            <p>Texto do post</p>
+        </div>
+        <div class="buttonspost">
+            <button>Like</button>
+        </div>
     </article>
 {% endblock articles %}
