--- a/forum/static/forum/main.css
+++ b/forum/static/forum/main.css
@@ -37,27 +37,29 @@ header{
     margin-left: 10px;
 }
 
-header input, button{
+header input, header button{
     margin-right: 10px;
 }
 
 header img{
-    width: 50px;
+    /*width: 50px;*/
     height: 50px;
     margin-left: 20px;
 }
 
 main{
     margin-top: 100px;
-    height: 100vh;
+    height: calc(100vh - 100px);
     display: flex;
+    overflow: scroll;
 }
 
 aside{
     width: 20%;
     padding: 0;
     margin-top: 30px;
-    /*position: fixed;*/
+    position: sticky;
+    top: 2rem;
 }
 
 aside ul{
@@ -81,7 +83,6 @@ aside h3{
 section{
     width: 60%;
     margin: 30px 0px;
-    height: 100%;
 }
 
 article{
@@ -90,20 +91,50 @@ article{
     padding: 20px;
     border-radius: 5px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.buttonspost{
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.buttonspost img{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
 }
 
 .avatar {
-  vertical-align: middle;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    /*display: block;*/
+    vertical-align: middle;
 }
 
-article a{
-    margin: 0px;
-    text-align: center;
+.toppost{
+    display: flex;
+}
+
+.toppost a:nth-child(2){
     text-decoration: none;
     color: #3b5998;
+    margin-left: 10px;
+    font-size: 17px;
+    display: flex;
+    align-items: center;
+
+}
+
+.toppost a:nth-child(3){
+    margin-left: 5px;
+    color: gray;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
 }
 
 button{
@@ -115,4 +146,78 @@ button{
     letter-spacing: 2px;
     padding: 5px 10px;
     height: 30px;
+    cursor: pointer;
 }
+
+.login{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0, 0,0 , 0.5);
+    /*display: flex;*/
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-container{
+    width: 60%;
+    height: 500px;
+    background-color: white;
+    border-radius: 5px;
+    text-align: center;
+    display: flex;
+}
+
+.login-container img{
+    width: 30px;
+    height: 30px;
+}
+
+.login-form{
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /*padding: 50px;*/
+}
+
+.login-form img{
+    width: 100px;
+    height: 100px;
+}
+
+.login-form input{
+    border: none;
+    text-align: center;
+    border-bottom: 1px solid gray;
+    font-size: 20px;
+    margin-top: 15px;
+    width: 200px;
+    padding-bottom: 10px;
+}
+
+.login-form input:nth-child(2){
+    margin-top: 25px;
+}
+
+.login-form button{
+    margin-top: 30px;
+    border-radius: 100px;
+    width: 100px;
+}
+
+.login-art img{
+    width: 100%;
+    height: 500px;
+    text-align: right;
+}
+
+.login-art{
+    /*background-color: #3b5998;*/
+    justify-content: flex-end;
+    width: 65%;
+}
+
