--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -19,7 +19,7 @@
                 <div class="toppost">
                     <a href=""><img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="avatar"></a>
                     <a href="">{{ post.owner.username}}</a>
-                    <a>{{ post.pub_data }}</a>
+                    <a>{{ post.pub_date }}</a>
                 </div>
                 <div class="textpost">
                     <p class="postTitle">{{ post.title }}</p>
