--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     {% load static %}
-    <link rel="stylesheet" href="../../static/forum/main.css">
+    <script src="{% static 'forum/js/jquery-3.5.0.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'forum/css/main.css' %}">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
 <body>
     <header>
         <div class="leftheader">
-            <img src="../../static/forum/undraw_at_home_octe.png">
+            <img src="{% static 'forum/img/undraw_at_home_octe.png' %}">
             <a id="forumtitle">Quarentine Life</a>
         </div>
         <div class="rightheader">
@@ -37,9 +38,9 @@
 
     <div class="login">
         <div class="login-container">
-            <img src="../../static/forum/close1.png" id="close">
+            <img src="{% static 'forum/img/close1.png' %}" id="close">
             <div class="login-form">
-                <img src="../../static/forum/undraw_profile_pic_ic5t.png">
+                <img src="{% static 'forum/img/undraw_profile_pic_ic5t.png' %}">
                 <input type="text" name="username" id="id_username" placeholder="Username"></a>
                 <input type="text" name="password" id="id_password1" placeholder="Password"></a>
                 <button class="loginbutton">LogIn</button>
@@ -47,7 +48,7 @@
                 <a href="#" id="signup">Registe-se aqui</a>
             </div>
             <div class="signup-form">
-                <img src="../../static/forum/undraw_profile_pic_ic5t.png">
+                <img src="{% static 'forum/img/undraw_profile_pic_ic5t.png' %}">
                 <input type="text" name="username" id="id_username" placeholder="Username"></a>
                 <input type="text" name="email" id="id_email" placeholder="E-mail"></a>
                 <input type="text" name="password" id="id_password1" placeholder="Password"></a>
@@ -57,38 +58,41 @@
                 <a href="#" id="signin">Faça login aqui</a>
             </div>
             <div class="login-art">
-                <img src="../../static/forum/undraw_social_distancing_2g0u.png">
+                <img src="{% static 'forum/img/undraw_social_distancing_2g0u.png' %}">
             </div>
         </div>
     </div>
 
     <script>
-        document.getElementById("navloginbutton").addEventListener("click", function () {
-            document.querySelector(".login").style.display = "flex";
+        $(document).ready(function () {
+            $("#navloginbutton").click(function () {
+                document.querySelector(".login").style.display = "flex";
+            })
+
+            $("#close").click(function () {
+                document.querySelector(".login").style.display = "none";
+            })
+
+            $("#signup").click(function () {
+                document.querySelector(".login-form").style.display = "none";
+                document.querySelector(".signup-form").style.display = "flex";
+                {#document.querySelector(".signup-form").style.order = 2;#}
+                document.querySelector(".login-art").style.order = 1;
+                document.querySelector(".login-art img").style.transform = "scaleX(-1)";
+                document.querySelector("#close").style.left = "revert";
+                document.querySelector("#close").style.right = "10px";
+            })
+
+            $("#signin").click(function () {
+                document.querySelector(".login-form").style.display = "flex";
+                document.querySelector(".signup-form").style.display = "none";
+                document.querySelector(".login-art").style.order = 2;
+                document.querySelector(".login-art img").style.transform = "scaleX(1)";
+                document.querySelector("#close").style.left = "10px";
+                document.querySelector("#close").style.right = "revert";
+            })
         })
 
-        document.getElementById("close").addEventListener("click", function () {
-            document.querySelector(".login").style.display = "none";
-        })
-
-        document.getElementById("signup").addEventListener("click", function () {
-            document.querySelector(".login-form").style.display = "none";
-            document.querySelector(".signup-form").style.display = "flex";
-            {#document.querySelector(".signup-form").style.order = 2;#}
-            document.querySelector(".login-art").style.order = 1;
-            document.querySelector(".login-art img").style.transform = "scaleX(-1)";
-            document.querySelector("#close").style.left = "revert";
-            document.querySelector("#close").style.right = "10px";
-        })
-
-        document.getElementById("signin").addEventListener("click", function () {
-            document.querySelector(".login-form").style.display = "flex";
-            document.querySelector(".signup-form").style.display = "none";
-            document.querySelector(".login-art").style.order = 2;
-            document.querySelector(".login-art img").style.transform = "scaleX(1)";
-            document.querySelector("#close").style.left = "10px";
-            document.querySelector("#close").style.right = "revert";
-        })
 
     </script>
 
