Alteraçoes no css de login

--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -8,7 +8,7 @@
             {% endfor %}
         </ul>
     {% else %}
-        <p>Não há tópicos</p>
+        <a>Não há tópicos</a>
     {% endif %}
 {% endblock asideList %}
 
