--- a/forum/static/forum/css/main.css
+++ b/forum/static/forum/css/main.css
@@ -137,7 +137,10 @@ article .postTitle{
 .loginbutton, .signupButton{
     border: 1px solid transparent;
     border-radius: 100px;
-    background-color: #ff6200;
+    /*background-color: #ff6200;*/
+    background: #f12711;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f5af19, #f12711);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-transform: uppercase;
     color: white;
     letter-spacing: 2px;
@@ -215,7 +218,6 @@ article .postTitle{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /*order: 2;*/
 }
 
 .signup-form{
@@ -257,7 +259,7 @@ article .postTitle{
     font-size: 12px;
 }
 
-.login-art img{
+.login-art img, .signup-art img{
     width: 100%;
     height: 500px;
     text-align: right;
@@ -266,9 +268,13 @@ article .postTitle{
 }
 
 .login-art{
-    /*background-color: #3b5998;*/
     justify-content: flex-end;
     width: 65%;
-    /*order: 1;*/
+}
+
+.signup-art{
+    justify-content: start;
+    width: 65%;
+    display: none;
 }
 
