--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -16,7 +16,11 @@
         </div>
         <div class="rightheader">
             <a style="float: right"><input type="text" name="SearchBar" placeholder="Search..."></a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'forum:logout' %}"><button class="logoutbutton">LogOut</button></a>
+            {% else %}
             <a><button class="loginbutton" id="navloginbutton">Log In</button></a>
+            {% endif %}
         </div>
     </header>
 
@@ -41,18 +45,21 @@
             <img src="{% static 'forum/img/close1.png' %}" id="close">
             <div class="login-form">
                 <img src="{% static 'forum/img/undraw_profile_pic_ic5t.png' %}">
-                <input type="text" name="username" id="id_username" placeholder="Username"></a>
-                <input type="text" name="password" id="id_password1" placeholder="Password"></a>
-                <button class="loginbutton">LogIn</button>
+                <form id="login_form" action="{% url 'forum:api_login' %}" method="post">
+                    {% csrf_token %}
+                    {% for field in loginForm %}
+                        {{ field }}
+                    {% endfor %}
+                    <input type="submit" class="loginbutton" value="LogIn">
+                </form>
                 <a>Ainda não está registado?</a>
                 <a href="#" id="signup">Registe-se aqui</a>
             </div>
             <div class="signup-form">
                 <img src="{% static 'forum/img/undraw_profile_pic_ic5t.png' %}">
-                <input type="text" name="username" id="id_username" placeholder="Username"></a>
-                <input type="text" name="email" id="id_email" placeholder="E-mail"></a>
-                <input type="text" name="password" id="id_password1" placeholder="Password"></a>
-                <input type="text" name="password2" id="id_password2" placeholder="Confirme a password"></a>
+                {% for field in signupForm %}
+                    {{ field }}
+                {% endfor %}
                 <button class="signupButton">SignUp</button>
                 <a>Já está registado?</a>
                 <a href="#" id="signin">Faça login aqui</a>
@@ -95,6 +102,7 @@
 
 
     </script>
+    <script src="{% static 'forum/js/accounts.js' %}"></script>
 
 
 </html>
