--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -26,8 +26,12 @@
                     <p class="postText">{{ post.text }}</p>
                 </div>
                 <div class="buttonspost">
-                    <button onclick="likefunctionClick(this)" onmouseenter="likefunctionHover(this)" onmouseleave="likefunctionHover(this)" class="like"></button>
-                    <p class="numberPizzas">{{ post.post_pizzas }}</p>
+                    <form class="likeForm" method="post" action="{% url 'forum:api_like_toggle' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="post_id" value="{{ post.id }}">
+                        <input type="submit" class="like"  value="">
+                    </form>
+                    <p name="{{ post.id }}" class="numberPizzas">{{ post.num_likes }}</p>
                     <button>Comment</button>
                 </div>
             </article>
@@ -110,26 +114,4 @@
             <button>Like</button>
         </div>
     </article>
-
-    <script>
-
-        var isliked = false;
-        var likes=0;
-        function likefunctionClick(x) {
-            if(!isliked) {
-                isliked = true;
-                likes++;
-            }else{
-                isliked = false;
-                likes--;
-            }
-        }
-
-        function likefunctionHover(x) {
-            if(!isliked) {
-                x.classList.toggle("liked");
-            }
-        }
-
-    </script>
 {% endblock articles %}
