--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -73,36 +73,36 @@
     <script>
         $(document).ready(function () {
             $("#navloginbutton").click(function () {
-                document.querySelector(".login").style.display = "flex";
-            })
+                $(".login").css("display", "flex")
+            });
 
             $("#close").click(function () {
-                document.querySelector(".login").style.display = "none";
-            })
+                $(".login").css("display", "none")
+            });
 
             $("#signup").click(function () {
-                document.querySelector(".login-form").style.display = "none";
-                document.querySelector(".signup-form").style.display = "flex";
-                {#document.querySelector(".signup-form").style.order = 2;#}
-                document.querySelector(".login-art").style.order = 1;
-                document.querySelector(".login-art img").style.transform = "scaleX(-1)";
-                document.querySelector("#close").style.left = "revert";
-                document.querySelector("#close").style.right = "10px";
+                $(".login-form").css("display", "none");
+                $(".signup-form").css("display", "flex");
+                $(".login-art").css("order", "1");
+                $(".login-art img").css("transform", "scaleX(-1)");
+                $("#close").css("left", "revert");
+                $("#close").css("right", "10px");
             })
 
             $("#signin").click(function () {
-                document.querySelector(".login-form").style.display = "flex";
-                document.querySelector(".signup-form").style.display = "none";
-                document.querySelector(".login-art").style.order = 2;
-                document.querySelector(".login-art img").style.transform = "scaleX(1)";
-                document.querySelector("#close").style.left = "10px";
-                document.querySelector("#close").style.right = "revert";
+                $(".login-form").css("display", "flex");
+                $(".signup-form").css("display", "none");
+                $(".login-art").css("order", "2");
+                $(".login-art img").css("transform", "scaleX(1)");
+                $("#close").css("left", "10px");
+                $("#close").css("right", "revert");
             })
         })
 
 
     </script>
     <script src="{% static 'forum/js/accounts.js' %}"></script>
+    <script src="{% static 'forum/js/main.js' %}"></script>
 
 
 </html>
